--- a/index.html
+++ b/index.html
@@ -13,13 +13,54 @@
       div {
         border: 1px solid #ccc;
       }
+      p, h1 {
+        text-align: center;
+      }
     </style>
 
    <title>Code Challenge #7</title>
  </head>
  <body>
    <!-- Start here with your container -->
-   
+   <div class="container">
+     <div class="row">
+       <div class="col-12">
+         <h1>1</h1>
+       </div>
+     </div>
+    <div class="row">
+      <div class="col-12">
+        <p>2</p>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-4">
+        <p>3</p>
+      </div>
+      <div class="col-4">
+        <p>4</p>
+      </div>
+      <div class="col-4">
+        <p>5</p>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-6">
+        <p>6</p>
+      </div>
+      <div class="col-6">
+        <p>7</p>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-4">
+        <p>8</p>
+      </div>
+      <div class="col-8">
+        <p>9</p>
+      </div>
+    </div>
+   </div>
    
    
    <!-- Optional JavaScript -->
@@ -28,4 +69,4 @@
    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js" integrity="sha384-a5N7Y/aK3qNeh15eJKGWxsqtnX/wWdSZSKp+81YjTmS15nvnvxKHuzaWwXHDli+4" crossorigin="anonymous"></script>
  </body>
-</html>
+</html
